[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameManager.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Server.gd" type="Script" id=3]
[ext_resource path="res://player_ship.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI.tscn" type="PackedScene" id=5]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )

[node name="UI" parent="." instance=ExtResource( 5 )]

[node name="Server" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Client" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="playerShip" parent="Client" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.3685, -5.65253 )

[node name="Players" type="Spatial" parent="Client"]

[node name="countdownTimer" type="Timer" parent="Client"]

[node name="MainMenu" type="CanvasLayer" parent="."]
[connection signal="join_server" from="UI" to="." method="_on_UI_join_server"]
[connection signal="start_server" from="UI" to="." method="_on_UI_start_server"]
[connection signal="dead" from="Client/playerShip" to="Client" method="_on_player_dead"]
