<<<<<<< HEAD
[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI.tscn" type="PackedScene" id=1]
=======
[gd_scene load_steps=5 format=2]

>>>>>>> 59f11d5... initial commit
[ext_resource path="res://player_ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://GameManager.gd" type="Script" id=4]
[ext_resource path="res://Server.gd" type="Script" id=5]

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

<<<<<<< HEAD
[node name="UI" parent="." instance=ExtResource( 1 )]
=======
[node name="TitleScreen" type="CanvasLayer" parent="."]
>>>>>>> 59f11d5... initial commit

[node name="Server" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Client" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="playerShip" parent="Client" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.3685, -5.65253 )

[node name="Players" type="Spatial" parent="Client"]

<<<<<<< HEAD
[node name="countdownTimer" type="Timer" parent="Client"]

[node name="MainMenu" type="CanvasLayer" parent="."]
[connection signal="join_server" from="UI" to="." method="connect_to_server"]
[connection signal="start_server" from="UI" to="." method="start_server"]
[connection signal="dead" from="Client/playerShip" to="Client" method="_on_player_dead"]
=======
[node name="MainMenu" type="CanvasLayer" parent="."]
>>>>>>> 59f11d5... initial commit
